--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node app.js",
     "client": "cd client && npm start",
-    "dev": "concurrently \"npm start\" \"npm run client\""
+    "dev": "concurrently \"npm start\" \"npm run client\"",
+    "build": "cd client && npm run build"
   },
   "repository": {
     "type": "git",
@@ -21,7 +22,8 @@
   "homepage": "https://github.com/gowenong/where-in-the-world#readme",
   "dependencies": {
     "express": "^4.19.2",
-    "mongodb": "^6.5.0"
+    "pg": "^8.11.3",
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
