--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/gowenong/where-in-the-world#readme",
   "dependencies": {
     "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.11.3",
     "react-select": "^5.8.0"
   },
