--- a/package.json
+++ b/package.json
@@ -11,22 +11,27 @@
     "prisma:migrate": "prisma migrate dev"
   },
   "dependencies": {
+    "@math.gl/core": "^4.0.1",
+    "@math.gl/web-mercator": "^4.0.1",
     "@prisma/client": "^5.18.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@turf/turf": "^7.1.0",
     "axios": "^1.7.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "lodash": "^4.17.21",
     "lucide-react": "^0.436.0",
+    "mapbox-gl": "^3.6.0",
     "next": "14.2.6",
     "pg": "^8.12.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-map-gl": "^7.1.7",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
